# MidnightEngine

./: .gitignore  CMakeLists.txt  Makefile  todo.org
demos/cube/: fragment.glsl  main.c
examples/basic/: main.c  vertex.glsl
examples/cube/: Makefile  main  main.c
include/: engine.h  linalgebra.h  midnight.h  types.h  utils.h  utils_gl.h  utils_read.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: engine.c  linalgebra.c  midnight.c  utils.c  utils_gl.c  utils_read.c
